[package]
name = "zoltan-clang"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
log = "0.4"
clang = { version = "1.0", features = ["clang_10_0"] }
quickscope = "0.2"

[dependencies.zoltan]
path = "../core"

[dependencies.flexi_logger]
version = "0.22"
default-features = false
features = ["colors"]
