[package]
name = "zoltan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = "1"
enum-as-inner = "0.5"
log = "0.4"
aho-corasick = "0.7"
peg = "0.8"
ustr = "0.8"
derive_more = "0.99"
bpaf = "0.4"
auto_enums = "0.7"
itertools = "0.10"

[dependencies.gimli]
version = "0.26"
default-features = false
features = ["read", "write", "std"]

[dependencies.object]
version = "0.29"
default-features = false
features = ["read_core", "write_std", "elf", "pe"]
