[package]
name = "zoltan"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = "2"
enum-as-inner = "0.7"
log = "0.4"
aho-corasick = "1.1"
peg = "0.8"
ustr = "1.1"
derive_more = { version = "2.1", features = ["full"] }
bpaf = "0.9"
auto_enums = "0.8"

[dependencies.gimli]
version = "0.33"
default-features = false
features = ["read", "write", "std"]

[dependencies.object]
version = "0.39"
default-features = false
features = ["read_core", "write_std", "elf", "pe"]

[dev-dependencies]
assert_matches = "1.5.0"
