[package]
name = "zoltan-saltwater"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
log = "0.4"

[dependencies.zoltan]
path = "../core"

[dependencies.flexi_logger]
version = "0.22"
default-features = false
features = ["colors"]

[dependencies.saltwater]
git = "https://github.com/jac3km4/saltwater"
rev = "v0.11.0-custom"
package = "saltwater-parser"
